Move ModelRemoveRowTest from ItemModel -> TestLib

--- a/libs/TestLib_Core/src/CMakeLists.txt
+++ b/libs/TestLib_Core/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCE_FILES
   Mdt/TestLib/CreateFile.cpp
   Mdt/TestLib/ItemModel.cpp
   Mdt/TestLib/ItemModelInsertRowTest.cpp
+  Mdt/TestLib/ItemModelRemoveRowTest.cpp
 )
 
 find_package(Qt5 COMPONENTS Core Test)
