Sql split SchemaTableTest

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -53,7 +53,8 @@ addSqlTest("FieldNameTest")
 # addSqlTest("SchemaFieldTest")
 addSqlTest("SchemaPrimaryKeyTest")
 # addSqlTest("SchemaForeignKeyTest")
-# addSqlTest("SchemaTableTest")
+addSqlTest("SchemaTableTest")
+# addSqlTest("SchemaTableModelTest")
 # addSqlTest("SchemaTablePopulationTest")
 # addSqlTest("SchemaTest")
 # addSqlTest("SchemaDriverTest")
