Sql split SchemaFieldTest -> SchemaFieldModelTest

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -50,7 +50,9 @@ addSqlTest("FieldNameTest")
 # addSqlTest("FromClauseTest")
 # addSqlTest("SelectStatementTest")
 # addSqlTest("QueryTest")
-# addSqlTest("SchemaFieldTest")
+addSqlTest("SchemaFieldTypeMapTest")
+addSqlTest("SchemaFieldTest")
+# addSqlTest("SchemaFieldModelTest")
 addSqlTest("SchemaPrimaryKeyTest")
 # addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTableTest")
