--- a/libs/Error_Core/tests/CMakeLists.txt
+++ b/libs/Error_Core/tests/CMakeLists.txt
@@ -19,3 +19,4 @@ endfunction()
 addErrorCoreTest("ErrorTest")
 addErrorCoreTest("FileBackendTest")
 addErrorCoreTest("ErrorLoggerTest")
+addErrorCoreTest("AssertTest")
