--- a/libs/Entity_Core/src/CMakeLists.txt
+++ b/libs/Entity_Core/src/CMakeLists.txt
@@ -11,6 +11,9 @@ set(SOURCE_FILES
   Mdt/Entity/ValueAt.cpp
   Mdt/Entity/FieldAt.cpp
   Mdt/Entity/DataList.cpp
+  Mdt/Entity/PrimaryKeyField.cpp
+  Mdt/Entity/PrimaryKey.cpp
+  Mdt/Entity/ItemModelPrimaryKey.cpp
   Mdt/Entity/TableModelRecordAdapter.cpp
   Mdt/Entity/ReadOnlyTableModel.cpp
   Mdt/Entity/EditableTableModel.cpp
@@ -33,7 +36,7 @@ mdt_add_library(
   NAME Entity_Core
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES ItemModel Qt5::Core;
+  LINK_DEPENDENCIES ItemModel Qt5::Core Error_Core; # Error_Core currently only for MDT_ASSERT()
 )
 target_compile_definitions(Entity_Core PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 
