Sql: split SchemaTableTest / SchemaTableBenchmark

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -56,6 +56,7 @@ addSqlTest("SchemaFieldTest")
 addSqlTest("SchemaPrimaryKeyTest")
 # addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTableTest")
+addSqlTest("SchemaTableBenchmark")
 # addSqlTest("SchemaTableModelTest")
 # addSqlTest("SchemaTablePopulationTest")
 # addSqlTest("SchemaTest")
