Sql Schema: split SchemaFieldTest / SchemaFieldBenchmark

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -52,6 +52,7 @@ addSqlTest("FieldNameTest")
 # addSqlTest("QueryTest")
 addSqlTest("SchemaFieldTypeMapTest")
 addSqlTest("SchemaFieldTest")
+addSqlTest("SchemaFieldBenchmark")
 # addSqlTest("SchemaFieldModelTest")
 addSqlTest("SchemaPrimaryKeyTest")
 # addSqlTest("SchemaForeignKeyTest")
