Entity: implement generating a SQL table from a entity

--- a/libs/Entity_Sql/tests/CMakeLists.txt
+++ b/libs/Entity_Sql/tests/CMakeLists.txt
@@ -27,4 +27,5 @@ endfunction()
 #================= Tests ====================
 
 addEntity_SqlTest("FieldTest")
+addEntity_SqlTest("PrimaryKeyTest")
 addEntity_SqlTest("TableTest")
