--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,8 @@ add_subdirectory(libs/Translation_Widgets)
 add_subdirectory(libs/Sql)
 add_subdirectory(libs/Entity_Core)
 add_subdirectory(libs/Entity_Sql)
+add_subdirectory(libs/Railway_Core)
+add_subdirectory(libs/Railway_Widgets)
 
 # include(MdtInstallQt5)
 
