--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ add_subdirectory(libs/Application_Core_Single)
 add_subdirectory(libs/Application_Widgets)
 add_subdirectory(libs/Application_Widgets_Single)
 add_subdirectory(libs/Algorithm)
+add_subdirectory(libs/Container)
 add_subdirectory(libs/Expected)
 add_subdirectory(libs/FilterExpression)
 add_subdirectory(libs/Numeric)
