--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -55,8 +55,7 @@ addItemModelTest("RelationKeyTest")
 addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
-addItemModelTest("StlContainerTest")
-addItemModelTest("StlContainerBenchmark")
+addItemModelTest("StlTableTest")
 addItemModelTest("StlContainerIteratorAdapterTest")
 addItemModelTest("StlListModelTest")
 addItemModelTest("StlListModelBenchmark")
