--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -36,6 +36,8 @@ addEntity_CoreTest("DataTemplateTest")
 addEntity_CoreTest("DataListTest")
 addEntity_CoreTest("PrimaryKeyTest")
 addEntity_CoreTest("ItemModelPrimaryKeyTest")
+addEntity_CoreTest("ForeignKeyTest")
+addEntity_CoreTest("ItemModelForeignKeyTest")
 addEntity_CoreTest("TableModelRecordAdapterTest")
 addEntity_CoreTest("TableModelTest")
 
