--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -38,6 +38,8 @@ addEntity_CoreTest("PrimaryKeyTest")
 addEntity_CoreTest("ItemModelPrimaryKeyTest")
 addEntity_CoreTest("ForeignKeyTest")
 addEntity_CoreTest("ItemModelForeignKeyTest")
+addEntity_CoreTest("RelationTest")
+addEntity_CoreTest("ItemModelRelationTest")
 addEntity_CoreTest("TableModelRecordAdapterTest")
 addEntity_CoreTest("TableModelTest")
 
