Sql: import ForeignKeyTest from experimental

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -55,7 +55,7 @@ addSqlTest("SchemaFieldTest")
 addSqlTest("SchemaFieldBenchmark")
 # addSqlTest("SchemaFieldModelTest")
 addSqlTest("SchemaPrimaryKeyTest")
-# addSqlTest("SchemaForeignKeyTest")
+addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTableTest")
 addSqlTest("SchemaTableBenchmark")
 # addSqlTest("SchemaTableModelTest")
