Entity: implement IsRelation type trait

--- a/libs/Entity_Core/src/CMakeLists.txt
+++ b/libs/Entity_Core/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
   Mdt/Entity/TypeTraits/IsEntityFieldDef.cpp
   Mdt/Entity/TypeTraits/IsEntityDef.cpp
   Mdt/Entity/TypeTraits/IsEntity.cpp
+  Mdt/Entity/TypeTraits/IsRelation.cpp
   Mdt/Entity/FieldFlags.cpp
   Mdt/Entity/FieldMaxLength.cpp
   Mdt/Entity/FieldAttributes.cpp
