Entity DataList: implement insert()/erase()

--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ addEntity_CoreTest("ValueAtTest")
 addEntity_CoreTest("FieldAtTest")
 addEntity_CoreTest("DataTemplateTest")
 addEntity_CoreTest("DataListTest")
+addEntity_CoreTest("DataListItemModelTest")
 addEntity_CoreTest("FieldDataValidatorTest")
 addEntity_CoreTest("PrimaryKeyTest")
 addEntity_CoreTest("ItemModelPrimaryKeyTest")
