Entity: implement IntegralUniqueIdTemplate

--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ addEntity_CoreTest("TypeTraitsTest")
 addEntity_CoreTest("DefTest")
 addEntity_CoreTest("ValueAtTest")
 addEntity_CoreTest("FieldAtTest")
+addEntity_CoreTest("UniqueIdTest")
 addEntity_CoreTest("DataTemplateTest")
 addEntity_CoreTest("DataListTest")
 addEntity_CoreTest("DataListItemModelTest")
