--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -45,7 +45,7 @@ addEntity_CoreTest("RelationTest")
 addEntity_CoreTest("ItemModelRelationTest")
 addEntity_CoreTest("TableModelRecordAdapterTest")
 addEntity_CoreTest("TableModelTest")
-
+addEntity_CoreTest("StlTableProxyTest")
 # Clang warns about explicit move that prevents copy elision.
 # For this test case, we need explicit move to check our code
 # if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
