Entity: implement AbstractCachedRepository

--- a/libs/Entity_Core/src/CMakeLists.txt
+++ b/libs/Entity_Core/src/CMakeLists.txt
@@ -31,9 +31,12 @@ set(SOURCE_FILES
   Mdt/Entity/ReadOnlyTableModel.cpp
   Mdt/Entity/EditableTableModel.cpp
   Mdt/Entity/RowResizableTableModel.cpp
-  Mdt/Entity/StlTableProxyImplementationInterface.cpp
-  Mdt/Entity/StlTableProxyIterator.cpp
-  Mdt/Entity/StlTableProxy.cpp
+  Mdt/Entity/AbstractCachedRepository.cpp
+  Mdt/Entity/RepositoryHandle.cpp
+  Mdt/Entity/CachedRepositoryStlTableProxy.cpp
+#   Mdt/Entity/StlTableProxyImplementationInterface.cpp
+#   Mdt/Entity/StlTableProxyIterator.cpp
+#   Mdt/Entity/StlTableProxy.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
