--- a/libs/Sql/src/CMakeLists.txt
+++ b/libs/Sql/src/CMakeLists.txt
@@ -6,26 +6,26 @@ set(SOURCE_FILES
 #     Mdt/Sql/InsertQuery.cpp
     Mdt/Sql/SelectTable.cpp
 #     Mdt/Sql/SelectFieldSqlTransform.cpp
-#     Mdt/Sql/SelectFieldItem.cpp
+    Mdt/Sql/SelectFieldItem.cpp
 #     Mdt/Sql/SelectFieldItemSqlTransform.cpp
 #     Mdt/Sql/SelectFieldListSqlTransform.cpp
-#     Mdt/Sql/Expression/TerminalSqlTransform.cpp
-#     Mdt/Sql/Expression/ComparisonSqlTransform.cpp
-#     Mdt/Sql/Expression/LogicalSqlTransform.cpp
-#     Mdt/Sql/Expression/LikeExpressionSqlTransform.cpp
-#     Mdt/Sql/JoinConstraintFieldPairList.cpp
+    Mdt/Sql/Expression/TerminalSqlTransform.cpp
+    Mdt/Sql/Expression/ComparisonSqlTransform.cpp
+    Mdt/Sql/Expression/LogicalSqlTransform.cpp
+    Mdt/Sql/Expression/LikeExpressionSqlTransform.cpp
+    Mdt/Sql/JoinConstraintFieldPairList.cpp
 #     Mdt/Sql/JoinConstraintFieldPairListSqlTransform.cpp
-#     Mdt/Sql/JoinConstraintExpression.cpp
-#     Mdt/Sql/JoinConstraint.cpp
+    Mdt/Sql/JoinConstraintExpression.cpp
+    Mdt/Sql/JoinConstraint.cpp
 #     Mdt/Sql/JoinConstraintSqlTransform.cpp
 #     Mdt/Sql/JoinClauseItemSqlTransform.cpp
 #     Mdt/Sql/JoinClauseItemListSqlTransform.cpp
-#     Mdt/Sql/JoinClause.cpp
+    Mdt/Sql/JoinClause.cpp
 #     Mdt/Sql/JoinClauseSqlTransform.cpp
-#     Mdt/Sql/FromClause.cpp
+    Mdt/Sql/FromClause.cpp
 #     Mdt/Sql/FromClauseSqlTransform.cpp
-#     Mdt/Sql/WhereExpression.cpp
-#     Mdt/Sql/SelectStatement.cpp
+    Mdt/Sql/WhereExpression.cpp
+    Mdt/Sql/SelectStatement.cpp
 #     Mdt/Sql/SelectStatementSqlTransform.cpp
 #     Mdt/Sql/SelectQuery.cpp
 #     Mdt/Sql/Schema/Driver.cpp
@@ -51,7 +51,7 @@ set(SOURCE_FILES
 #     Mdt/Sql/Schema/IndexListModel.cpp
     Mdt/Sql/Schema/Table.cpp
 #     Mdt/Sql/Schema/TableModel.cpp
-#     Mdt/Sql/Schema/View.cpp
+    Mdt/Sql/Schema/View.cpp
 #     Mdt/Sql/Schema/ViewSqlTransform.cpp
 #     Mdt/Sql/Schema/Schema.cpp
 )
