--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -50,6 +50,7 @@ addSqlCoreTest("FieldNameTest")
 # addSqlCoreTest("FromClauseTest")
 # addSqlCoreTest("SelectStatementTest")
 # addSqlCoreTest("QueryTest")
+addSqlCoreTest("SQLiteDatabaseTest")
 addSqlCoreTest("SchemaFieldTypeMapTest")
 addSqlCoreTest("SchemaFieldTest")
 addSqlCoreTest("SchemaFieldBenchmark")
