Entity: implement SqlData + SqlStatement

--- a/libs/Entity_Sql/tests/CMakeLists.txt
+++ b/libs/Entity_Sql/tests/CMakeLists.txt
@@ -30,3 +30,5 @@ addEntity_SqlTest("FieldTest")
 addEntity_SqlTest("PrimaryKeyTest")
 addEntity_SqlTest("ForeignKeyTest")
 addEntity_SqlTest("TableTest")
+addEntity_SqlTest("SelectStatementTest")
+addEntity_SqlTest("DataTest")
