--- a/libs/Container/tests/CMakeLists.txt
+++ b/libs/Container/tests/CMakeLists.txt
@@ -28,3 +28,4 @@ endfunction()
 
 addContainerTest("StlContainerTest")
 addContainerTest("StlContainerBenchmark")
+addContainerTest("RowColumnListTest")
