--- a/libs/TestLib_Core/tests/CMakeLists.txt
+++ b/libs/TestLib_Core/tests/CMakeLists.txt
@@ -29,3 +29,4 @@ endfunction()
 addTestLib_CoreTest("FakeRootTest")
 addTestLib_CoreTest("CreateFileTest")
 addTestLib_CoreTest("ItemModelTest")
+addTestLib_CoreTest("CompareHelperTest")
