--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -42,6 +42,7 @@ endfunction()
 addItemModelTest("qt5_tst_modeltest")
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
+addItemModelTest("SelectionTest")
 addItemModelTest("FormatMapTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
