ItemModel: implement removeRows

--- a/libs/ItemModel/src/CMakeLists.txt
+++ b/libs/ItemModel/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
     Mdt/ItemModel/RowRangeList.cpp
     Mdt/ItemModel/RowSelectionAlgorithm.cpp
     Mdt/ItemModel/RowSelection.cpp
+    Mdt/ItemModel/RemoveRows.cpp
     Mdt/ItemModel/ColumnRange.cpp
     Mdt/ItemModel/IndexFormatMapItem.cpp
     Mdt/ItemModel/IndexFormatMap.cpp
