--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -43,6 +43,7 @@ addItemModelTest("qt5_tst_modeltest")
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
 addItemModelTest("SelectionTest")
+addItemModelTest("RemoveRowsTest")
 addItemModelTest("FormatMapTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
