Numeric: implement IntegralRange

--- a/libs/Numeric/src/CMakeLists.txt
+++ b/libs/Numeric/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCE_FILES
   Mdt/Numeric/Double.cpp
   Mdt/Numeric/Resistance.cpp
   Mdt/Numeric/Length.cpp
+  Mdt/Numeric/IntegralRange.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
