--- a/libs/Container/tests/CMakeLists.txt
+++ b/libs/Container/tests/CMakeLists.txt
@@ -28,5 +28,7 @@ endfunction()
 
 addContainerTest("StlContainerTest")
 addContainerTest("StlContainerBenchmark")
+addContainerTest("StlContainerIteratorAdapterTest")
 addContainerTest("RowColumnListTest")
 addContainerTest("TableCacheOperationTest")
+addContainerTest("TableCacheTest")
