--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -44,6 +44,8 @@ addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
 addItemModelTest("SelectionTest")
 addItemModelTest("RemoveRowsTest")
+addItemModelTest("AbstractCachedTableModelTest")
+addItemModelTest("CachedTableModelTest")
 addItemModelTest("FormatMapTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
@@ -58,7 +60,7 @@ addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
 addItemModelTest("StlTableTest")
-addItemModelTest("StlContainerIteratorAdapterTest")
+# addItemModelTest("StlContainerIteratorAdapterTest")
 addItemModelTest("StlListModelTest")
 addItemModelTest("StlListModelBenchmark")
 addItemModelTest("StlTableModelTest")
