--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
 addItemModelTest("SelectionTest")
 addItemModelTest("RemoveRowsTest")
+addItemModelTest("AbstractTableModelTest")
 addItemModelTest("AbstractCachedTableModelTest")
 addItemModelTest("CachedTableModelTest")
 addItemModelTest("FormatMapTest")
@@ -60,7 +61,6 @@ addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
 addItemModelTest("StlTableTest")
-# addItemModelTest("StlContainerIteratorAdapterTest")
 addItemModelTest("StlListModelTest")
 addItemModelTest("StlListModelBenchmark")
 addItemModelTest("StlTableModelTest")
