Entity: create AbstractRepositoryTest

--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ addEntity_CoreTest("ItemModelRelationTest")
 addEntity_CoreTest("TableModelRecordAdapterTest")
 addEntity_CoreTest("TableModelTest")
 addEntity_CoreTest("TableCacheTest")
+addEntity_CoreTest("AbstractRepositoryTest")
 addEntity_CoreTest("AbstractCachedRepositoryTest")
 addEntity_CoreTest("AbstractCachedEntityRepositoryTest")
 addEntity_CoreTest("RepositoryHandleTest")
