--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -38,6 +38,8 @@ endfunction()
 
 addSqlCoreTest("SimpleTypesTest")
 addSqlCoreTest("FieldNameTest")
+addSqlCoreTest("FieldNameValueMapTest")
+addSqlCoreTest("FieldNameValueMapBenchmark")
 # addSqlCoreTest("SelectFieldTest")
 # addSqlCoreTest("ExpressionTest")
 # addSqlCoreTest("LikeExpressionTest")
