QueryExpression: create SelectEntity

--- a/libs/QueryExpression_Core/src/CMakeLists.txt
+++ b/libs/QueryExpression_Core/src/CMakeLists.txt
@@ -4,6 +4,9 @@ set(SOURCE_FILES
   Mdt/QueryExpression/LiteralValue.cpp
   Mdt/QueryExpression/FieldName.cpp
   Mdt/QueryExpression/EntityName.cpp
+  Mdt/QueryExpression/EntityAndFieldTerminal.cpp
+  Mdt/QueryExpression/SelectEntity.cpp
+  Mdt/QueryExpression/SelectQuery.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
