--- a/libs/QueryExpression_Core/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Core/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ endfunction()
 #================= Tests ====================
 
 addQueryExpression_CoreTest("ExpressionGrammarTest")
+addQueryExpression_CoreTest("SelectQueryTest")
