QueryExpression: SelectField is now also a Boost.Proto terminal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,7 @@ add_subdirectory(libs/FileSystem_Core)
 add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
+add_subdirectory(libs/QueryExpression_Core)
 add_subdirectory(libs/Sql_Core)
 add_subdirectory(libs/Sql_Widgets)
 add_subdirectory(libs/Entity_Core)
