QueryExpression: create LikeExpression

--- a/libs/QueryExpression_Core/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Core/tests/CMakeLists.txt
@@ -30,3 +30,5 @@ addQueryExpression_CoreTest("ExpressionGrammarTest")
 addQueryExpression_CoreTest("SelectQueryTest")
 addQueryExpression_CoreTest("SelectFieldTest")
 addQueryExpression_CoreTest("SelectFieldListTest")
+addQueryExpression_CoreTest("LikeExpressionTest")
+addQueryExpression_CoreTest("LikeExpressionBenchmark")
