Sql: import expression tests from experimental

--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -43,7 +43,7 @@ addSqlCoreTest("FieldNameValueMapTest")
 addSqlCoreTest("FieldNameValueMapBenchmark")
 addSqlCoreTest("PrimaryKeyRecordTest")
 # addSqlCoreTest("SelectFieldTest")
-# addSqlCoreTest("ExpressionTest")
+addSqlCoreTest("ExpressionTest")
 # addSqlCoreTest("LikeExpressionTest")
 # addSqlCoreTest("LikeExpressionSqliteTest")
 # addSqlCoreTest("WhereExpressionTest")
@@ -52,7 +52,7 @@ addSqlCoreTest("PrimaryKeyRecordTest")
 # addSqlCoreTest("JoinConstraintTest")
 # addSqlCoreTest("JoinClauseTest")
 # addSqlCoreTest("FromClauseTest")
-# addSqlCoreTest("SelectStatementTest")
+addSqlCoreTest("SelectStatementTest")
 addSqlCoreTest("QueryTest")
 addSqlCoreTest("SQLiteDatabaseTest")
 addSqlCoreTest("SchemaFieldTypeMapTest")
