--- a/libs/QueryExpression_Core/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Core/tests/CMakeLists.txt
@@ -32,3 +32,4 @@ addQueryExpression_CoreTest("SelectFieldTest")
 addQueryExpression_CoreTest("SelectFieldListTest")
 addQueryExpression_CoreTest("LikeExpressionTest")
 addQueryExpression_CoreTest("LikeExpressionBenchmark")
+addQueryExpression_CoreTest("ExpressionTreeTest")
